Successfully added runners

--- a/templates/register-runner.html
+++ b/templates/register-runner.html
@@ -139,8 +139,7 @@
           <strong>Default Docker Image:</strong> riscv64/debian:trixie-slim
         </p>
         <p class="text-center text-lg mb-2 text-blue-300">
-          View full system specifications for all instances on the
-          <a href="https://10x-engineers.github.io/riscv-ci-partners/compute_instances/" target="_blank" class="text-blue-400 hover:underline">Specs Page</a>.
+          The data about the runners is saved in the runner_registry.yaml and ansible/inventory.ini file.
         </p>
         <p class="text-center text-lg mb-2 text-blue-300">
           Check the
@@ -149,9 +148,6 @@
         </p>
         <p class="text-center text-lg mb-2 text-blue-300">
           Watch <a href="https://youtu.be/OAkl_JE8zdM" target="_blank" class="text-blue-400 hover:underline">how to add GitLab RISC-V Runner</a>.
-        </p>
-        <p class="text-center text-lg font-medium text-yellow-400">
-          The runner will expire in 90 days from the date of registration.
         </p>
       </div>
     </section>
@@ -200,10 +196,10 @@
             <div class="mt-8 p-6 border border-blue-600 rounded-xl bg-[#1f2937] text-blue-100 shadow-sm">
               <h3 class="mt-0 text-2xl font-semibold mb-3 text-white">Need Help?</h3>
               <p class="text-lg mb-3">
-                If you experience any issues while registering a runner, or have questions, feedback, or concerns — we’re just an email away.
+                If you experience any issues while registering a runner, or have questions, feedback, or concerns — create an issue in the repository.
               </p>
-              <p class="text-lg font-bold">📧 Email:
-                <a href="mailto:cloud-v@10xengineers.ai" class="text-blue-400 hover:underline">cloud-v@10xengineers.ai</a>
+              <p class="text-lg font-bold"></p> GitHub Repository:
+                <a href="https://github.com/alitariq4589/riscv-gitlab-ci-infra">https://github.com/alitariq4589/riscv-gitlab-ci-infra</a>
               </p>
               <p class="text-lg">We’ll get back to you as soon as possible!</p>
             </div>
